--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@ cake watch:js       # Recompile CoffeeScript source files when
     <script src="./assets/js/prettify.js" type="text/javascript"></script>
     <script src="./vendor/jquery.js" type="text/javascript"></script>
     <script src="./vendor/underscore.js" type="text/javascript"></script>
-    <script src="./vendor/Backbone.js" type="text/javascript"></script>
+    <script src="./vendor/backbone.js" type="text/javascript"></script>
     <script src="./vendor/swipe.js" type="text/javascript"></script>
     <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
 
