Fix GitHub Buttons URLs

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <h2 class='big-h2 w310'>Grab your backpack and enjoy the Views</h2>
             <h3 class='big-h3 w310'>Backpack.js is a lightweight Backbone extension for composing and structuring UI components</h3>
             <div class='github-social w310'>
-              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=watch&count=true"
+              <iframe src="http://ghbtns.com/github-btn.html?user=airbnb&repo=backpack.js&type=watch&count=true"
                       allowtransparency="true" frameborder="0" scrolling="0" 
                       width="90px" height="30px"></iframe>
-              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=fork&count=true" 
+              <iframe src="http://ghbtns.com/github-btn.html?user=airbnb&repo=backpack.js&type=fork&count=true" 
                       allowtransparency="true" frameborder="0" scrolling="0" 
                       width="90px" height="30px"></iframe>
-              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=follow" 
+              <iframe src="http://ghbtns.com/github-btn.html?user=airbnb&repo=backpack.js&type=follow" 
                       allowtransparency="true" frameborder="0" scrolling="0" 
                       width="111px" height="30px"></iframe>
               <iframe allowtransparency="true" frameborder="0" scrolling="no"
@@ -844,7 +844,7 @@ cake watch:js       # Recompile CoffeeScript source files when
             </p>
             <br/>
             <div>
-              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=follow&count=true&size=large"
+              <iframe src="http://ghbtns.com/github-btn.html?user=airbnb&repo=backpack.js&type=follow&count=true&size=large"
                       allowtransparency="true" frameborder="0" scrolling="0" 
                       width="170px" height="30px"></iframe>
             </div>
