--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class='big-h1 w310'>Backpack.js</h1>
             <h2 class='big-h2 w310'>Grab your backpack and enjoy the Views</h2>
             <h3 class='big-h3 w310'>Backpack.js is a lightweight Backbone extension for composing and structuring UI components</h3>
-            <div class='github-social w310'>
+     <!--        <div class='github-social w310'>
               <iframe src="http://ghbtns.com/github-btn.html?user=airbnb&repo=backpack.js&type=watch&count=true"
                       allowtransparency="true" frameborder="0" scrolling="0" 
                       width="90px" height="30px"></iframe>
@@ -44,7 +44,7 @@
               <a href="https://twitter.com/backpackjs" class="twitter-follow-button" 
                  data-show-count="false">Follow @backpackjs</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-            </div>
+            </div> -->
           </section>
 
           <section class='bottom-60 clearfix'>
